--- a/compose.yml
+++ b/compose.yml
@@ -18,8 +18,8 @@ services:
       - 6543:5432
     restart: unless-stopped
     volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./server/schema.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./pg-data:/var/lib/postgresql/data
+      - ./sql/schema.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: gossip
