--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/react-query": "^5.28.6",
     "@types/react": "~18.2.45",
+    "expo-secure-store": "^12.8.1",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
     "typescript": "^5.1.3"
