--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
-    "expo": "~50.0.7",
+    "expo": "^50.0.14",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.7",
+    "expo-router": "^3.4.8",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
@@ -26,7 +27,6 @@
     "@babel/core": "^7.20.0",
     "@tanstack/react-query": "^5.28.6",
     "@types/react": "~18.2.45",
-    "expo-secure-store": "^12.8.1",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
     "typescript": "^5.1.3"
