--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
+    "axios": "^1.6.8",
     "expo": "^50.0.14",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
