--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "axios": "^1.6.8",
     "expo": "^50.0.14",
     "expo-constants": "~15.4.5",
@@ -20,11 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.6",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
