--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@shopify/flash-list": "1.6.4",
     "axios": "^1.6.8",
     "expo": "^51.0.8",
     "expo-constants": "^16.0.1",
+    "expo-contacts": "~13.0.3",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.14",
     "expo-secure-store": "^13.0.1",
     "expo-sqlite": "^14.0.3",
     "expo-status-bar": "^1.12.1",
+    "libphonenumber-js": "^1.11.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.74.1",
@@ -27,9 +30,7 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "~0.19.6",
-    "expo-contacts": "~13.0.3",
-    "@shopify/flash-list": "1.6.4"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
