--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "^3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@shopify/flash-list": "1.6.4",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "expo": "^51.0.8",
     "expo-constants": "^16.0.1",
@@ -22,7 +23,6 @@
     "expo-secure-store": "^13.0.1",
     "expo-sqlite": "^14.0.3",
     "expo-status-bar": "^1.12.1",
-    "libphonenumber-js": "^1.11.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "^0.74.1",
@@ -30,7 +30,8 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-crypto": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
