--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-native": "^0.74.2",
     "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
