--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-use-websocket": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
@@ -42,7 +43,7 @@
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-native-web": "^0.19.10",
     "typescript": "^5.3.3"
   },
